@@ -33,7 +33,8 @@
 #define ACTIVE_BG	"#ececec"
 #define SELECT_BG	"#c3c3c3"
 #define TROUGH		"#c3c3c3"
-#define INDICATOR	"#b03060"
+#define CHECK_INDICATOR	WHITE
+#define MENU_INDICATOR  BLACK
 #define DISABLED	"#a3a3a3"
 
 /*
@@ -96,7 +97,7 @@
 #define DEF_LABCHKRAD_RELIEF		"flat"
 #define DEF_BUTTON_REPEAT_DELAY		"0"
 #define DEF_BUTTON_REPEAT_INTERVAL	"0"
-#define DEF_BUTTON_SELECT_COLOR		INDICATOR
+#define DEF_BUTTON_SELECT_COLOR		CHECK_INDICATOR
 #define DEF_BUTTON_SELECT_MONO		BLACK
 #define DEF_BUTTON_SELECT_IMAGE		(char *) NULL
 #define DEF_BUTTON_STATE		"normal"
@@ -300,7 +301,7 @@
 #define DEF_MENU_FG			BLACK
 #define DEF_MENU_POST_COMMAND		""
 #define DEF_MENU_RELIEF			"raised"
-#define DEF_MENU_SELECT_COLOR		INDICATOR
+#define DEF_MENU_SELECT_COLOR		MENU_INDICATOR
 #define DEF_MENU_SELECT_MONO		BLACK
 #define DEF_MENU_TAKE_FOCUS		"0"
 #define DEF_MENU_TEAROFF		"1"
